# xtctool

./: .gitignore  CHAPTER_DESIGN.md  README.md  RELEASING.md  config.example.toml  config.toml.example  pyproject.toml
examples/: convert.sh
mockup/: mockup.py
tests/: test_convert_pipeline.py  test_metadata.py  test_pages.py  test_pdf_pipeline.py  test_toc_extraction.py  test_toc_to_xtc.py  test_typst_markdown.py  test_xtc_concat_chapters.py
xtctool/: __init__.py
xtctool/algo/: __init__.py  dithering.py
xtctool/assets/: __init__.py  base.py  image.py  markdown.py  pdf.py  typst.py  xtcontainer.py  xtframe.py
xtctool/cli/: __init__.py  convert.py  upload.py
xtctool/core/: __init__.py  xtc.py  xtg.py  xth.py
xtctool/debug/: output.py
xtctool/templates/: README.md  default.typ.jinja
xtctool/utils/: __init__.py  pages.py  pdf.py  typst.py
